<resources>
    <string name="app_name">Chadvice</string>
    <string name="signup">Sign-Up</string>
    <string name="login">Login</string>
    <string name="logoContentDesc">Logo on starting-page</string>
    <string name="logout">Logout</string>
    <string name="launch_btn">Launch AI</string>
    <string name="analysis_loading">Analysis is Loading . . .</string>
    <string name="loaded_analysis">Loaded Analysis</string>
    <string name="potential_analysis">Analysis After Potential Message</string>

    <string name="inquisitiveFeat">Inquisitiveness</string>
    <string name="interestFeat">Interestingness</string>
    <string name="ghostedFeat">Likelihood of being Ghosted</string>

    <string name="inputMessage">Input A Potential Next Message</string>
    <string name="welcome">Welcome to Chadvice!</string>
    <string name="centerWelcome"> To begin receiving insights into your tinder conversations, just tap the Launch Ai button, open your conversation of each choice, and press on our chathead! </string>
    <string name="minimise">minimise</string>
    <string name="dummy_email">tmp@tmp.com</string>
    <string name="action_settings">Settings</string>
    <string name="stop_analysis">Stop Analysis</string>
    <string name="test_post_btn">test post</string>
    <string name="test_get_btn">test get</string>
    <string name="enter">Enter</string>
    <string name="recording">Recording</string>
</resources>